# chatrooms-server

./: .gitignore  .pre-commit-config.yaml  README.md  dump_db.sh  dump_db_data.sh  pyproject.toml  todos.tsv
src/chatrooms/: __init__.py  __version__.py  app.py  auth.py  avatar.py  file_upload.py  logging.json  logs.py  main.py  schemas.py  settings.py
src/chatrooms/database/: __init__.py  common.py  connections.py  errors.py  files.py  manage.py  messages.py  migrations.py  queries.py  rooms.py  todos.py  users.py
src/chatrooms/database/migrations/: __init__.py  cli.py  core.py  errors.py  migration_protocol.py  version1.py  version2.py  version3.py
src/chatrooms/routers/: __init__.py  commons.py  files.py  general.py  messages.py  rooms.py  todos.py  user.py
tests/test_chatrooms/: common.py  conftest.py  test_app.py
tests/test_chatrooms/test_routers/: test_general.py  test_todos.py
